2014-12-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck-device.pl: s/writablility/writability/.

2014-11-28  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amflock.c: Set errno.
	* perl/Amanda/Changer.pm: Print error on lock error.

2014-11-27  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Check with getuid since we are not root
	  there.
	* common-src/krb5-security.c: Drop root privileges, fix typos.

2014-11-26  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Typo.

2014-11-24  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c (amar_attr_add_data_fd_thread): Close the file
	  descriptor when there is nothing more to read from.
	* client-src/sendbackup.c (check_result): Fix a race bug. sendbackup
	  do not always report the exit status of the application.
	  Once amvmware close its socket, an immediate call to waitpid(-1,)
	  might not trap it exited.
	  The patch check all pid we forked until they exit (max 5 seconds),
	  after that they are killed.

2014-11-19  Jean-Louis Martineau <martineau@zmanda.com>
	* Makefile.am: Add '-I /usr/share/aclocal' to ACLOCAL_AMFLAGS

2014-11-12  Jean-Louis Martineau <martineau@zmanda.com>
	* autogen: Add "-I /usr/share/aclocal" to includes

2014-11-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Fix perl warning.

2014-11-08  Jean-Louis Martineau <martineau@zmanda.com>
	* xfer-src/filter-process.c (get_err_fd): Remove prototype.
	* xfer-src/xfer-element.h (get_err_fd): Add prototype.
	* perl/Amanda/Cmdline.swg: #include "match.h"

2014-11-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Fix BROKEN-DRIVE-LOADED-SLOT.

2014-11-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm (print_to_server): Print enssage to debug
	  file.

2014-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Fix BROKEN-DRIVE-LOADED-SLOT.